tests/snapshots/integration__integration_tests__push__push_no_remote.snap
---
source: tests/integration_tests/push.rs
info:
  program: wt
  args:
    - push
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpjaOCrN/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
✅ [32mPushed to [1m[32mfeature[0m[0m

----- stderr -----
